[package]
name = "vta_sync_backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# database setting storage
base64 = "0.13"
# session encryption key
rand = "0.8.4"
# password stuff
argon2 = {version = "0.3", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }
# errors
color-eyre = "0.5"
thiserror = "1"
# webserver + async runtime
actix-web = "4.0.0-beta.10"
actix-rt = "2"
actix-identity = "0.4.0-beta.3"
# enum to string and back
strum = {version = "0.23", features = ["derive"] }
# serialization
serde = "1"
serde_json = "1"
# logging
tracing = "0.1"
tracing-actix-web = "0.5.0-beta.1"
tracing-opentelemetry = { version = "0.16" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
opentelemetry = { version = "0.16", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.15", features = ["rt-tokio-current-thread"] }
# JWT for app API authentication
jsonwebtoken = "7"
# time handling
time = "0.3"
# orm + sql
[dependencies.ormx]
version = "0.10"
features = ["mysql"]

[dependencies.sqlx]
version = "0.5"
features = [ "runtime-tokio-native-tls","mysql","migrate","chrono","uuid"]
# uuid, used also by sqlx
[dependencies.uuid]
version = "^0.8.2"
features = ["serde", "v4"]
# chrono, also sqlx
[dependencies.chrono]
version = "^0.4"
features = ["serde", "std"]
# config
[dependencies.config]
version = "0.11"
features = [ "toml","ini"]