[package]
name = "vta_sync_backend"
version = "0.1.0"
edition = "2018"
rust-version = "1.57"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[dependencies]
# database setting storage
base64 = "0.13"
# session encryption key
rand = {version = "0.8.4", features = ["std"]}
# password stuff
argon2 = {version = "0.3", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }
# auth code hashing and constant time verification
sha2 = "0.10"
base64ct = "1" # can't go above 1.1 due to argon2 deps
subtle = "2.4" # constant time comparison
# errors
color-eyre = "0.5"
thiserror = "1"
# webserver + async runtime
actix-web = "4.0.0-beta.10"
actix-rt = "2"
actix-identity = "0.4.0-beta.3"
# enum to string and back
strum = {version = "0.23", features = ["derive"] }
# serialization
serde = "1"
serde_json = "1"
# logging
tracing = "0.1"
tracing-actix-web = "0.5.0-beta.1"
tracing-opentelemetry = { version = "0.16" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
opentelemetry = { version = "0.16", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.15", features = ["rt-tokio-current-thread"] }
# JWT for app API authentication
jsonwebtoken = "7"
# try_collect
futures = "0.3"
# async sql
[dependencies.sqlx]
version = "0.5"
features = [ "runtime-tokio-native-tls","mysql","migrate","chrono","uuid"]
# uuid, used also by sqlx
[dependencies.uuid]
version = "^0.8.2"
features = ["serde", "v4"]
# chrono, also sqlx
[dependencies.chrono]
version = "^0.4"
features = ["serde", "std"]
# config
[dependencies.config]
version = "0.11"
features = [ "toml","ini"]

[profile.dev.package.subtle]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.base64ct]
opt-level = 3
[profile.dev.package.argon2]
opt-level = 3